Ändere Abhängigkeit von "bluetooth_adapters" zu "bluetooth" im Manifest

--- a/custom_components/litime_bms_ble/manifest.json
+++ b/custom_components/litime_bms_ble/manifest.json
@@ -3,7 +3,7 @@
   "name": "LiTime BMS BLE",
   "codeowners": ["@rubenmuehlhans"],
   "config_flow": true,
-  "dependencies": ["bluetooth_adapters"],
+  "dependencies": ["bluetooth"],
   "documentation": "https://github.com/rubenmuehlhans/litime-ble-hacs",
   "bluetooth": [
     {
