--- a/custom_components/litime_bms_ble/manifest.json
+++ b/custom_components/litime_bms_ble/manifest.json
@@ -1,16 +1,16 @@
 {
   "domain": "litime_bms_ble",
   "name": "LiTime BMS BLE",
-  "codeowners": ["@rubenmuehlhans"],
-  "config_flow": true,
-  "dependencies": ["bluetooth"],
-  "documentation": "https://github.com/rubenmuehlhans/litime-ble-hacs",
   "bluetooth": [
     {
       "local_name": "LT-*",
       "connectable": true
     }
   ],
+  "codeowners": ["@rubenmuehlhans"],
+  "config_flow": true,
+  "dependencies": ["bluetooth_adapters"],
+  "documentation": "https://github.com/rubenmuehlhans/litime-ble-hacs",
   "iot_class": "local_polling",
   "issue_tracker": "https://github.com/rubenmuehlhans/litime-ble-hacs/issues",
   "requirements": [],
