--- a/custom_components/litime_bms_ble/manifest.json
+++ b/custom_components/litime_bms_ble/manifest.json
@@ -9,7 +9,7 @@
   ],
   "codeowners": ["@rubenmuehlhans"],
   "config_flow": true,
-  "dependencies": ["bluetooth_adapters"],
+  "dependencies": ["bluetooth"],
   "documentation": "https://github.com/rubenmuehlhans/litime-ble-hacs",
   "iot_class": "local_polling",
   "issue_tracker": "https://github.com/rubenmuehlhans/litime-ble-hacs/issues",
